fix(img): overflow

--- a/assets/styles/main.scss
+++ b/assets/styles/main.scss
@@ -119,7 +119,7 @@ h1.title {
   gap: 0 5rem;
 
   &__img {
-    min-height: 100%;
+    max-height: 100%;
     width: 40%;
     border-radius: 18px;
     object-fit: cover;
